# thatsmidnightdotcom

./: .gitignore  README.md  app.py  cdk.json  local_test_harness.py  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml  difference.yml
cdk/: constructs.py  enums.py  stacks.py
src/: index.html
tests/unit/: test_stack.py
