[tool.poetry]
name = "thatsmidnightdotcom"
version = "0.1.0"
description = "Repository for ThatsMidnight's personal static website hosted on S3."
authors = ["thatsmidnight <10793854+thatsmidnight@users.noreply.github.com >"]
license = "Creative Commons Zero v1.0 Universal"
readme = "README.md"
packages = [
    { include = "cdk" }
]

[tool.poetry.dependencies]
python = "^3.10"
aws-cdk-lib = "^2.89.0"


[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
pytest = "^7.4.0"
coverage = "^7.2.7"
pytest-cov = "^4.1.0"
pylint = "^2.17.5"
poethepoet = "^0.21.1"
python-dotenv = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
